--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,2 @@
+/20151118.txt
 /com/
-/commons-logging-1.0.4.jar
-/commons-logging-api-1.1.jar
-/log4j-1.2.17.jar
-/log4j.properties
-/ojdbc6.jar
-/system.properties
