--- a/src/system.properties
+++ b/src/system.properties
@@ -1,14 +1,14 @@
 # Set 10 product code;
-productId0=SR301
-productId1=productId1
-productId2=productId2
-productId3=productId3
-productId4=productId4
-productId5=productId5
-productId6=productId6
-productId7=productId7
-productId8=productId8
-productId9=productId9
+productId0=SR601
+productId1=rb1601
+productId2=y1601
+productId3=ru1601
+productId4=TA601
+productId5=
+productId6=
+productId7=
+productId8=
+productId9=
 # Set start-end time;
 start_time=
 end_time=
